# acorn

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-test.yml
docs/: code_structure_and_design_patterns.md
scripts/: generate_bytecode.py  hex2class.sh  hex2txt.sh
src/: byteCodeWriter.cpp  byteCodeWriter.h  compiler.cpp  compiler.h  compilerApplication.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h
src/ast/: astNode.h  astVisitor.h  byteCodeGeneratorVisitor.cpp  byteCodeGeneratorVisitor.h  intLiteralNode.h  printNode.h
src/cpp/: byteCodeWriter.cpp  compiler.cpp  compiler.h  compilerApplication.h  main.cpp  scanner.cpp
src/cpp/ast/: astVisitor.h  byteCodeGeneratorVisitor.cpp  byteCodeGeneratorVisitor.h  intLiteralNode.h  printNode.h
src/cpp/interpreter/: interpreter.cpp
src/cpp/model/: bigEndianUtil.h  classByteCode.h  constantClassInfo.h  constantFieldInfo.h  constantIntegerInfo.h  constantMethodInfo.h  constantNameAndTypeInfo.h  constantPoolEntry.h  constantUtf8Info.h  methodInfo.h
src/interpreter/: interpreter.cpp  interpreter.h  jniJvmLauncher.cpp  jniJvmLauncher.h  jvmLauncher.h  main.cpp  systemJvmLauncher.h
src/model/: bigEndianUtil.h  byteCodeSerializable.h  classByteCode.h  classFileHeader.h  classHeaderInfo.h  codeAttribute.h  constantClassInfo.h  constantFieldInfo.h  constantIntegerInfo.h  constantMethodInfo.h  constantNameAndTypeInfo.h  constantPool.h  constantPoolEntry.h  constantUtf8Info.h  methodInfo.h
tests/: byteCodeWriterTest.cpp  classByteCodeTest.cpp  classHeaderInfoTest.cpp  compilerIntegrationTest.cpp  constantPoolTest.cpp  interpreterTest.cpp  testHelper.h
tests/cpp/: byteCodeGeneratorVisitorTest.cpp  byteCodeWriterTest.cpp  classHeaderInfoTest.cpp  compilerIntegrationTest.cpp  mainTest.cpp  scannerTest.cpp  testHelper.h
tests/cpp/resources/: Acorn.clazz  Acorn_class.hex
tests/resources/: Acorn_class.hex  bytecode.txt  valid.aco
